# quarto-wgpu-rust

./: .gitignore  Cargo.toml  Readme.MD
assets/models/quarto/: Arrow.mtl  Board.mtl  Circle.mtl
assets/models/quarto/game_pieces/: Dark_Round_Tall_Hollow.mtl  Light_Square_Tall_Hollow.mtl
src/: ai.rs  camera.rs  custom.wgsl  game.rs  instance.rs  light.rs  light.wgsl  main.rs  model.rs  texture.rs  texture.wgsl  util.rs
