[package]
name = "quarto_graphics_ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25.0"
image = "0.23.14"
cgmath = "0.18.0"
env_logger = "0.9.0"
log = "0.4.14"
wgpu = "0.11.1"
pollster = "0.2.4"
bytemuck = {version = "1.7.2", features = ["derive"]}
anyhow = "1.0.45"
tobj = "3.2.0"
oorandom = "11.1.3"
rayon = "1.5.1"